Adjust graph creation

--- a/notebooks/analysis-for-quals-paper.ipynb
+++ b/notebooks/analysis-for-quals-paper.ipynb
@@ -545,7 +545,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09240c3592dc47ad8a53ffab28387eed",
+       "model_id": "c5ab469697074beb84e45794204a144d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1195,7 +1195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e4e5cc0406b4beba42ff729546a623e",
+       "model_id": "1b8cb40e7c9a4efdb886446decb8fd2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1993,7 +1993,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8cd443264354d54b5cf519dbfb980d5",
+       "model_id": "51f2ce37083c4afeaefbea2994d36560",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2012,6 +2012,7 @@
     "    name, df = group\n",
     "    df = df.set_index('Level')\n",
     "    df.index = df.index.map({1: 'R', 3: 'F'})\n",
+    "    df = df.fillna(30 * 60) # Plot timeouts somehow\n",
     "    df.plot(kind='barh', ax=ax, legend=False)\n",
     "    ax.set_ylabel('')\n",
     "    ax.set_xlabel(\"Time (s)\")\n",
@@ -2362,16 +2363,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-47-76dc441ca059>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-76dc441ca059>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    # df2.set_index(['points', 'Statement']).drop('spec', axis=1)\u001b[0m\n\u001b[0m                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Old plot thoughs, retained in comments just in case\n",
     "# plot_df = all_data[['points', 'spec']].copy()\n",
@@ -2379,7 +2371,7 @@
     "# plot_df['Not in solution'] = all_data['continued'] - all_data['n_solutions']\n",
     "# plot_df.index.name = \"Statement\"\n",
     "# fig = plt.figure()\n",
-    "for idx, groupby_res in enumerate(plot_df.groupby(['points', 'spec'])):\n",
+    "# for idx, groupby_res in enumerate(plot_df.groupby(['points', 'spec'])):\n",
     "#     name, data = groupby_res\n",
     "#    points, spec = name\n",
     "#     ax = fig.add_subplot(2, 2, idx + 1)\n",
@@ -2393,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2403,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2414,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2423,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2440,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
