CSV for the parallelism experiment

--- a/notebooks/2020-05-13-parallelism-experiment.ipynb
+++ b/notebooks/2020-05-13-parallelism-experiment.ipynb
@@ -338,6 +338,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_table['Speedup'] = speedup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_table.to_csv('../results/2020-05-13-row-parallelism-times.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
