More plots in more formats

--- a/notebooks/2020-11-05-plot-experiments.ipynb
+++ b/notebooks/2020-11-05-plot-experiments.ipynb
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4aded947f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6b3d13c1c0>"
       ]
      },
      "execution_count": 18,
@@ -601,6 +601,7 @@
     "fig.tight_layout()\n",
     "fig.legend(labels=series.index, loc=\"lower center\", ncol=len(series.index))\n",
     "fig.subplots_adjust(top=0.85, bottom=0.15)\n",
+    "fig.savefig(\"../results/2020-11-05-time-split.pdf\")\n",
     "fig.savefig(\"../results/2020-11-05-time-split.svg\")\n",
     "fig"
    ]
@@ -1154,7 +1155,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4adbe3aee0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f6b3a1d93a0>"
       ]
      },
      "execution_count": 34,
@@ -1370,6 +1371,7 @@
     "fig.tight_layout()\n",
     "fig.subplots_adjust(top=0.85)\n",
     "fig.savefig(\"../results/2020-11-05-full-synthesis-times.svg\")\n",
+    "fig.savefig(\"../results/2020-11-05-full-synthesis-times.pdf\")\n",
     "fig"
    ]
   },
@@ -1750,7 +1752,8 @@
     "    fig.subplots_adjust(top=0.85)\n",
     "    return fig\n",
     "fig = speedup_plots(df, \"full\")\n",
-    "fig.savefig(\"/tmp/speedups.png\")\n",
+    "fig.savefig(\"../results/2020-11-05-speedups-swizzle-inventor.pdf\")\n",
+    "fig.savefig(\"../results/2020-11-05-speedups-swizzle-inventor.svg\")\n",
     "fig"
    ]
   },
